--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reqparam1",
   "version": "1.0.0",
   "description": "demo of req params",
-  "main": "getpost_form.js",
+  "main": "app4.js",
   "scripts": {
     "start": "nodemon getpost_form.js"
   },
